reorg + rel 1 cmds ... in progress

--- a/misc/todo.txt
+++ b/misc/todo.txt
@@ -1,25 +1,37 @@
 todo file
 
+Release 1
+
 code:
-[ ] /sources - select sources, show selected sources
-[ ] /stats
-[ ] mention contact email address
+[/] /sources - select sources, show selected sources
 [x] add a domain field to the source entries. value for existing is something like: "uknews"
-[ ] raw export of headline data - straight mongodb dunp?
-[ ] remove rss links from sources, move to advanced area
 [x] remove quiz prefix (first line) after the first one
+[/] credits (rss, feedburner, sources)
+[/] sha265 usernames?
+[x] make QRCode with link to bot: https://t.me/HeadlinerQuizBot
+[/] separate code into multiple files
+[/] mention contact telegram account
+[/] non container run
+[/] inplement command to send qr code
+[/] get own user info back
+[/] headings indexes (timestamp, source.name, source.domain)
+
+[ ] raw export of headline data - straight mongodb dunp?
+
+[ ] unique id for sources
+[ ] /stats
+[ ] remove rss links from sources, move to advanced area
 [ ] refine quiz display, remove "anonymous", 100%, etc
 [ ] donate? paywall?
 [ ] downloads (headings, sources)
-[ ] credits (rss, feedburner, sources)
-[ ] sha265 usernames?
-[ ] get own user info back
 [ ] push? (subscription)
-[ ] unique id for sources
 [ ] analysis plugins: sentiment, author gender
 [ ] include additional fields in text search (tags, ?)
-[ ] headings indexes (timestamp, source.name, source.domain)
 [ ] userlog table (quiz presented, quiz answered)
+[ ] inline usage - allow shared quiz inside a group conversation (competitive)
+[ ] Japanses/Hebrew headlines
+[ ] about
+
 
 
 meta:
